# ECEN_427

./: CodeToHTML.sh  format_code.sh  functions_to_run  project5verilog.txt  pynq
lab01/: CMakeCache.txt  Makefile
lab02/: CMakeCache.txt  CMakeLists.txt  Makefile  clock  cmake_install.cmake  main.c
lab02/intcFolder/: Makefile  cmake_install.cmake  intc.c
lab02/uioFolder/: CMakeCache.txt  CMakeLists.txt  Makefile  button_uio.c  button_uio.h  cmake_install.cmake  generic_uio.c  generic_uio.h  switch_uio.c  switch_uio.h
lab03/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hdmi.h  image_render.c  image_render.h  main.c  space_invaders  sprites.c
lab03/PDFs/: audio_driver.c
lab03/audio/: .audio.ko.cmd  .audio.mod.o.cmd  .audio.o.cmd  audio.c  audio.ko  audio.mod.c  modules.order
lab03/audio/.tmp_versions/: audio.mod
lab03/audio_driver/: audio_driver.c  audio_driver.h  cmake_install.cmake
lab03/globals/: cmake_install.cmake  globals.c  globals.h
lab03/i2cps/: i2cps.c
lab03/image_render/: CMakeLists.txt  Makefile  cmake_install.cmake  hdmi.c  hdmi.h  image_render.c  image_render.h  sprites.c  sprites.h
lab03/image_render/hdmi/: CMakeLists.txt  Makefile  cmake_install.cmake  hdmi.c  hdmi.h
lab03/image_render/score_board/: Makefile  cmake_install.cmake  high_scores.txt  score_board.c  score_board.h
lab03/image_render/sprites/: CMakeLists.txt  Makefile  cmake_install.cmake  sprites.c  sprites.h
lab03/intcFolder/: CMakeCache.txt  Makefile  cmake_install.cmake
lab03/score_board/: stats.c
lab03/sound_state/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sound_state.c  sound_state.h
lab03/uioFolder/: CMakeLists.txt  Makefile  switch_uio.h
lab04/: .audio.ko.cmd  .audio.mod.o.cmd  .audio.o.cmd  CMakeCache.txt  CMakeLists.txt  Makefile  audio.c  audio.h  audio_test  cmake_install.cmake  fifo.txt  i2cps.c  main.c  t.txt
lab04/.tmp_versions/: audio.mod
lab04/audio/: .audio.ko.cmd  .audio.mod.o.cmd  .audio.o.cmd  .audio.o.d  Makefile  audio.c  audio.ko  audio.mod.c  modules.order
lab04/audio/.tmp_versions/: audio.mod
lab04/audio_adau/: CMakeLists.txt  Makefile  audio_adau1761.c  audio_adau1761.h  cmake_install.cmake
lab04/audio_driver/: Makefile  audio_driver.c  audio_driver.h  cmake_install.cmake
lab04/globals/: CMakeLists.txt  globals.c  globals.h
lab04/i2cps/: Makefile  cmake_install.cmake  i2cps.h
lab04/sound_state/: CMakeLists.txt  Makefile  cmake_install.cmake  sound_state.c  sound_state.h
lab04/uio/: uio.c  uio.h
lab05/: 32bitcounter.txt  project5verilog.txt  tb.txt
lab06/: .skew.sh.swp  devicetree.dtb  pitTemp.c  sethnote.txt  sysfs_make.sh
lab06/pit/: .pit.ko.cmd  .pit.mod.o.cmd  .pit.o.cmd  modules.order  pit.c  pit.ko  pit.mod.c
lab06/pit/.tmp_versions/: pit.mod
lab06/pit_driver/: .pit.ko.cmd  .pit.mod.o.cmd  .pit.o.cmd  Makefile  modules.order  pit.c  pit.ko  pit.mod.c  pit_driver.c  pit_driver.h
lab06/pit_driver/.tmp_versions/: pit.mod
lab06/space_invaders/: CMakeCache.txt  CMakeLists.txt  Makefile  audiomake.sh  cmake_install.cmake  insmodAudioPit.sh  main.c  space_invaders
lab06/space_invaders/PDFs/: audio_driver.h  globals.c  lab4.txt  main.c  sound_state.c
lab06/space_invaders/audio/: .audio.ko.cmd  .audio.mod.o.cmd  .audio.o.cmd  modules.order
lab06/space_invaders/audio/.tmp_versions/: audio.mod
lab06/space_invaders/audio_driver/: CMakeLists.txt  Makefile  cmake_install.cmake
lab06/space_invaders/globals/: CMakeCache.txt  Makefile  cmake_install.cmake
lab06/space_invaders/i2cps/: CMakeLists.txt  Makefile  cmake_install.cmake
lab06/space_invaders/image_render/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
lab06/space_invaders/image_render/hdmi/: Makefile  hdmi.c
lab06/space_invaders/image_render/score_board/: CMakeLists.txt  Makefile  high_scores.txt  score_board.c  score_board.h
lab06/space_invaders/intcFolder/: Makefile  cmake_install.cmake  intc.c  intc.h
lab06/space_invaders/sound_state/: Makefile  cmake_install.cmake
lab06/space_invaders/uioFolder/: Makefile  cmake_install.cmake
pynq_mnt/lab01/: CMakeLists.txt  cmake_install.cmake  myfile  myfile.c  t.txt
pynq_mnt/lab02/: Makefile
pynq_mnt/lab02/intcFolder/: intc.h
pynq_mnt/lab02/uioFolder/: generic_uio.c
pynq_mnt/labs/: CMakeCache.txt  CMakeLists.txt  btn_uio.c  clock  cmake_install.cmake  main.c
pynq_mnt/labs/btnFolder/: CMakeLists.txt  Makefile  btn_uio.c  btn_uio.h  cmake_install.cmake
pynq_mnt/labs/intcFolder/: CMakeLists.txt  Makefile  cmake_install.cmake  intc.c  intc.h
pynq_mnt/labs/uioFolder/: cmake_install.cmake
vivado/ip_repo/myip_1.0/: component.xml
vivado/ip_repo/myip_1.0/hdl/: myip_v1_0.v  myip_v1_0_S00_AXI.v
