cmake_minimum_required (VERSION 3.5)

add_subdirectory(/home/xilinx/ECEN_427/lab03/image_render /home/xilinx/ECEN_427/lab03/image_render)
add_subdirectory(/home/xilinx/ECEN_427/lab03/intcFolder /home/xilinx/ECEN_427/lab03/intcFolder)
add_subdirectory(/home/xilinx/ECEN_427/lab03/uioFolder /home/xilinx/ECEN_427/lab03/uioFolder)
add_subdirectory(/home/xilinx/ECEN_427/lab03/globals /home/xilinx/ECEN_427/lab03/globals)
add_subdirectory(/home/xilinx/ECEN_427/lab03/sound_state /home/xilinx/ECEN_427/lab03/sound_state)
add_subdirectory(/home/xilinx/ECEN_427/lab03/audio_driver /home/xilinx/ECEN_427/lab03/audio_driver)
add_subdirectory(/home/xilinx/ECEN_427/lab03/i2cps /home/xilinx/ECEN_427/lab03/i2cps)

include_directories(/home/xilinx/ECEN_427/lab03/image_render)
include_directories(/home/xilinx/ECEN_427/lab03/intcFolder)
include_directories(/home/xilinx/ECEN_427/lab03/uioFolder)
include_directories(/home/xilinx/ECEN_427/lab03/globals)
include_directories(/home/xilinx/ECEN_427/lab03/sound_state)
include_directories(/home/xilinx/ECEN_427/lab03/audio_driver)
include_directories(/home/xilinx/ECEN_427/lab03/i2cps)

add_executable(space_invaders main.c)
target_link_libraries(space_invaders render)
target_link_libraries(space_invaders intc)
target_link_libraries(space_invaders btn)
target_link_libraries(space_invaders swtch)
target_link_libraries(space_invaders global)
target_link_libraries(space_invaders sound)
target_link_libraries(space_invaders audio_driver)
target_link_libraries(space_invaders i2cps)
