cmake_minimum_required (VERSION 3.5)

add_subdirectory(/home/xilinx/ECEN_427/lab06/space_invaders/image_render /home/xilinx/ECEN_427/lab06/space_invaders/image_render)
add_subdirectory(/home/xilinx/ECEN_427/lab06/space_invaders/intcFolder /home/xilinx/ECEN_427/lab06/space_invaders/intcFolder)
add_subdirectory(/home/xilinx/ECEN_427/lab06/space_invaders/uioFolder /home/xilinx/ECEN_427/lab06/space_invaders/uioFolder)
add_subdirectory(/home/xilinx/ECEN_427/lab06/space_invaders/globals /home/xilinx/ECEN_427/lab06/space_invaders/globals)
add_subdirectory(/home/xilinx/ECEN_427/lab06/space_invaders/sound_state /home/xilinx/ECEN_427/lab06/space_invaders/sound_state)
add_subdirectory(/home/xilinx/ECEN_427/lab06/space_invaders/audio_driver /home/xilinx/ECEN_427/lab06/space_invaders/audio_driver)
add_subdirectory(/home/xilinx/ECEN_427/lab06/space_invaders/i2cps /home/xilinx/ECEN_427/lab06/space_invaders/i2cps)

include_directories(/home/xilinx/ECEN_427/lab06/space_invaders/image_render)
include_directories(/home/xilinx/ECEN_427/lab06/space_invaders/intcFolder)
include_directories(/home/xilinx/ECEN_427/lab06/space_invaders/uioFolder)
include_directories(/home/xilinx/ECEN_427/lab06/space_invaders/globals)
include_directories(/home/xilinx/ECEN_427/lab06/space_invaders/sound_state)
include_directories(/home/xilinx/ECEN_427/lab06/space_invaders/audio_driver)
include_directories(/home/xilinx/ECEN_427/lab06/space_invaders/i2cps)

add_executable(space_invaders main.c)
target_link_libraries(space_invaders render)
target_link_libraries(space_invaders intc)
target_link_libraries(space_invaders btn)
target_link_libraries(space_invaders swtch)
target_link_libraries(space_invaders global)
target_link_libraries(space_invaders sound)
target_link_libraries(space_invaders audio_driver)
target_link_libraries(space_invaders i2cps)
